--- a/src/app/advertorial/advertorial.component.scss
+++ b/src/app/advertorial/advertorial.component.scss
@@ -5,3 +5,10 @@
 .alert {
   margin-bottom: 3px !important;
 }
+
+.dev-placeholder {
+  padding: 5px;
+  background: transparent;
+  display: flex;
+  justify-content: center;
+}
