--- a/src/app/changelog/changelog.component.html
+++ b/src/app/changelog/changelog.component.html
@@ -33,6 +33,17 @@
         <app-script-version
           [collapsable]="false"
           [new]="true"
+          [title]="'08-01-2024 - Publish siege overviews to the daily scoreboard'">
+          <p>
+            Team owners and admins can now publish sieges. A published siege overview is visible to all grepodata users on the dialy scoreboard for that world (as shown below).
+            The individual attacks are not made public. The team admins can always unpublish a siege to make it hidden again.
+          </p>
+          <br/><img style="max-width: 70%;" src="../../assets/images/siege_publishing.jpg"><br/><br/>
+        </app-script-version>
+
+        <app-script-version
+          [collapsable]="false"
+          [new]="false"
           [title]="'24-09-2023 - Team Operations: push notifications & sharing attack plans'"
           [github_url]="'https://github.com/GrepoDataTools/grepodata-backend/commit/1fec172cc0dbf602d2fefd70834ac0bba64bc3da#diff-c99d467c47c572f6de633952fa1de8c54b36adb85d925f031b05dcad62e2d39e'">
           <ul>
