--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -72,7 +72,7 @@
       <div class="col-md-4">
         <div class="productbox" routerLink="/points">
           <div class="fadeshop">
-            <span class="maxproduct"><img src="../../assets/images/scoreboard.png?v=1" alt=""></span>
+            <span class="maxproduct"><img src="../../assets/images/scoreboard.jpg?v=1" alt=""></span>
           </div>
           <div class="product-details">
             <a>
@@ -90,7 +90,7 @@
       <div class="col-md-4">
         <div class="productbox" routerLink="/points">
           <div class="fadeshop">
-            <span class="maxproduct"><img src="../../assets/images/player.png?v=1" alt=""></span>
+            <span class="maxproduct"><img src="../../assets/images/player.jpg?v=1" alt=""></span>
           </div>
           <div class="product-details">
             <a>
@@ -162,7 +162,7 @@
       <div class="col-md-12">
         <div class="productbox" routerLink="/indexer">
           <div class="fadeshop">
-            <span class="maxproduct"><img src="../../assets/images/indexer_operations.png" alt=""></span>
+            <span class="maxproduct"><img src="../../assets/images/indexer_operations.jpg" alt=""></span>
           </div>
           <div class="product-details">
             <a>
@@ -250,9 +250,10 @@
           GrepoData is created for the community, by the community. A special thanks to the following people for their contributions:
         </p>
         <strong>Vít Dolínek (LG)</strong> - For your countless contributions, creating the Discord bot, and pushing the frontend to the next level<br/>
+        <strong>David1327</strong> - For your help and for integrating GrepoData statistics into the DIO tools userscript<br/>
         <strong>Shuri2060</strong> - For your valuable feedback, ideas and contributions to the discussion<br/>
+        <strong>Gandalf13</strong> - For your help setting up the first GrepoData version in 2016<br/>
         <strong>megasmorf</strong> - For your contributions to the indexer & Discord bot<br/>
-        <strong>Gandalf13</strong> - For your help in the early days<br/>
       </div>
 
       <br/>
