--- a/src/app/indexer/landing-page/landing-page.component.html
+++ b/src/app/indexer/landing-page/landing-page.component.html
@@ -88,8 +88,8 @@
             <h2 style="font-family: Montserrat !important;" class="gd-secondary">
               City Indexer Preview 👀
             </h2>
-            <img class="img-thumbnail" src="../../assets/images/indexer_overview.png?v=1" alt="GrepoData City Indexer Team Overivew">
-            <img class="img-thumbnail" src="../../assets/images/indexer_operations.png?v=1" alt="GrepoData City Indexer Team Operations">
+            <img class="img-thumbnail" src="../../assets/images/indexer_overview.png?v=1" alt="GrepoData City Indexer Team Overview">
+            <img class="img-thumbnail" src="../../assets/images/indexer_operations.jpg?v=1" alt="GrepoData City Indexer Team Operations">
 <!--            <img class="img-thumbnail" src="../../assets/images/indexer.png?v=1" alt="GrepoData City Indexer My Intel">-->
           </div>
         </div>
