Fix ticker & mobile css

--- a/src/app/scoreboard/scoreboard.component.html
+++ b/src/app/scoreboard/scoreboard.component.html
@@ -759,7 +759,7 @@
 
 <!-- START: ticker -->
 <ng-template #ticker>
-  <div class="ticker-wrap" *ngIf="!mobile && !loadingDiffs && playerDiffs != '' && tab=='players'">
+  <div class="ticker-wrap" *ngIf="!mobile && !loadingDiffs && playerDiffs != ''">
     <div class="ticker">
       <div class="ticker__item" *ngIf="playerDiffs.att">
         <span class="item-red">Attack points in last update: &nbsp;&nbsp;&nbsp;&nbsp;</span>
